--- a/style.css
+++ b/style.css
@@ -1,16 +1,30 @@
-.board {
-  display: flex;
-  flex-flow: row wrap;
-  width: 600px;
+.game {
+  width: 400px;
   max-width: 90%;
   margin: auto; }
-  .board header {
+  .game header {
     width: 100%;
     height: 50px;
     display: flex;
-    flex-direction: row; }
-  .board .tile {
-    width: 33%;
-    height: 50px; }
-  .board .selected {
-    background-color: red; }
+    flex-direction: row;
+    justify-content: space-between; }
+    .game header .switch {
+      display: flex;
+      flex-direction: column; }
+      .game header .switch .selected {
+        background-color: red; }
+  .game .board {
+    display: flex;
+    flex-flow: row wrap;
+    height: 400px; }
+    .game .board .tile {
+      width: 31%;
+      height: 31%;
+      margin: 1%; }
+    .game .board .winTile {
+      background-color: black; }
+    .game .board .resultBox {
+      position: relative;
+      top: -200px;
+      margin: auto;
+      background-color: white; }
