--- a/style.scss
+++ b/style.scss
@@ -1,18 +1,38 @@
+$game-width: 400px;
 
-.board {
-    display: flex;
-    flex-flow: row wrap;
-    width: 600px; max-width: 90%;
+
+.game {
+
+    width: $game-width; max-width: 90%;
     margin: auto;
     header {
         width: 100%; height: 50px;
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
+        .switch {
+            display: flex;
+            flex-direction: column;
+            .selected {
+                background-color: red;
+            }
+        }
+
     }
-    .tile {
-        width: 33%; height: 50px;
-    }
-    .selected {
-        background-color: red;
+    .board {
+        display: flex;
+        flex-flow: row wrap;
+        height: $game-width;
+        .tile {
+            width: 31%; height: 31%;
+            margin: 1%;
+        }
+        .winTile {
+            background-color: black;
+        }
+        .resultBox {
+            position: relative; top: -$game-width/2; margin: auto;
+            background-color: white;
+        }
     }
 }
